<resources>
    <string name="app_name">Real-Time Rock Paper Scissors</string>

    <string name="menuLogoDesc">Real-Time Rock Paper Scissors logo</string>
    <string name="menuLocalSP">Local Multiplayer</string>
    <string name="menuWiFiMP">Singleplayer</string>
    <string name="menuBTMultiplayer">Bluetooth Multiplayer</string>
    <string name="menuMuteDesc">Mute button</string>
    <string name="menuOptionsDesc">Options button</string>

    <string name="gameSpBtnP1RockDesc">Player 1 rock button</string>
    <string name="gameSpBtnP1PaperDesc">Player 1 paper button</string>
    <string name="gameSpBtnP1ScissorsDesc">Player 1 scissors button</string>
    <string name="gameSpImgP1SelectedDesc">Player 1\'s selection</string>
    <string name="gameSpBtnP2RockDesc">Player 2 rock button</string>
    <string name="gameSpBtnP2PaperDesc">Player 2 paper button</string>
    <string name="gameSpBtnP2ScissorsDesc">Player 2 scissors button</string>
    <string name="gameSpImgP2SelectedDesc">Player 2\'s selection</string>

    <string name="rock">Rock</string>
    <string name="paper">Paper</string>
    <string name="scissors">Scissors</string>
    <string name="shoot">Shoot!</string>

    <string name="gameLength">GameLength</string>
    <string name="cpuDifficulty">CPU Difficulty</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="powerups">Powerups</string>
    <string name="seconds">Seconds</string>
    <string name="options">Options</string>
    <string name="placeHolderTime">30</string>

    <string name="startGame">Start Game</string>
    <string name="doublelab">Double</string>
    <string name="pointslab">Points</string>


</resources>
