<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.kotassium.rps.Menu">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="0dp"
        android:layout_height="122dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:contentDescription="@string/menuLogoDesc"
        app:layout_constraintBottom_toTopOf="@+id/menuLocalSingleplayer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <Button
        android:id="@+id/menuLocalSingleplayer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:background="@drawable/ic_launcher_background"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/menuLocalSP"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="24sp"
        android:textStyle="italic"
        android:typeface="monospace"
        app:layout_constraintBottom_toTopOf="@+id/menuSingleplayer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        tools:text="@string/menuLocalSP" />

    <Button
        android:id="@+id/menuSingleplayer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/ic_launcher_background"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/menuWiFiMP"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="24sp"
        android:textStyle="italic"
        android:typeface="monospace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menuLocalSingleplayer"
        tools:text="@string/menuWiFiMP" />

    <ImageButton
        android:id="@+id/menuMute"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/ic_launcher_background"
        android:contentDescription="@string/menuMuteDesc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menuSingleplayer"
        app:layout_constraintVertical_bias="0.166"
        app:srcCompat="@drawable/ic_mute_off" />

    <ImageButton
        android:id="@+id/menuOptions"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/ic_launcher_background"
        android:contentDescription="@string/menuOptionsDesc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menuSingleplayer"
        app:layout_constraintVertical_bias="0.166"
        app:srcCompat="@android:drawable/ic_menu_preferences" />

    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-3940256099942544/6300978111"
        ads:layout_constraintBottom_toBottomOf="parent"
        ads:layout_constraintEnd_toEndOf="parent"
        ads:layout_constraintStart_toStartOf="parent"
        ads:layout_constraintTop_toBottomOf="@+id/menuMute"></com.google.android.gms.ads.AdView>


</android.support.constraint.ConstraintLayout>
